# NEXAURA_QA

./: .env.example  .vercelignore  README.md  netlify.toml  pyproject.toml  railway.json  requirements.txt  run.py
api/: index.py
app/: __init__.py  config.py  exceptions.py  routes.py
app/ingestion/: git_ops.py
app/models/: schemas.py
app/services/: embedding_service.py  file_loader_service.py  git_service.py  parser_service.py  qa_service.py  retriever_service.py  vector_store_service.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
netlify/functions/: api.py
public/: index.html
public/js/: app.js
tests/: test_app.py
