[project]
name = "nexaura-qa"
version = "1.0.0"
description = "NexAura QA — Advanced Codebase Search Engine powered by Groq, Jina AI, and Chroma Cloud"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=21.2.0",
    "groq>=1.5.0",
    "httpx>=0.27.0",
    "chromadb-client>=0.4.0",
    "gitpython>=3.1.50",
    "tree-sitter>=0.26.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "python-dotenv>=1.2.2",
    "pydantic>=2.13.0",
]
